--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url('/assets/images/texture-wall-floor-stone-8892.png');
+    background-image: url('images/texture-wall-floor-stone-8892.png');
         min-height: 100vh;
         width: 100%;
         display: flex;
@@ -98,20 +98,20 @@ body{
     cursor: pointer;
 }
 .imgOne{
-    background-image: url('./images/pic-one.jpg');
+    background-image: url('images/pic-one.jpg');
 
 }
 .imgTwo{
-    background-image: url('./images/pic-two.jpg');
+    background-image: url('images/pic-two.jpg');
 }
 .imgThree{
-    background-image: url('./images/pic-three.jpg');
+    background-image: url('images/pic-three.jpg');
 }
 .imgFour{
-    background-image: url('./images/pic-four.jpg');
+    background-image: url('images/pic-four.jpg');
 }
 .imgFive{
-    background-image: url('./images/pic-five.jpg');
+    background-image: url('images/pic-five.jpg');
 }
 .imgTitle{
     width: 100%;
