added styles and fixed link for password generator

--- a/assets/style.css
+++ b/assets/style.css
@@ -95,12 +95,49 @@ body{
 /* End screen size ------------- */
 /* Portfolio images and divs */
 
+.overlay{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: .5s ease;
+    background-color: #000000bb;
+    z-index: 100;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.overlayBox{
+    margin: 0 auto;
+    height: 70%;
+    width: 60%;
+    background-color: #ffffffa1;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    padding: 0 5px;
+}
+.overlayText{
+    margin: auto;
+    color: black;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+}
 
-.img:hover{
-    cursor: pointer;
+@media only screen and (min-width: 1000px){
+    .overlay:hover{
+        cursor: pointer;
+        opacity: 1;  
+        
+    }
+    
 }
 .imgOne{
-    background-image: url('images/pic-one.jpg');
+    background-image: url('images/passGenTwo.png');
 
 }
 .imgTwo{
@@ -117,11 +154,11 @@ body{
 }
 .imgTitle{
     width: 100%;
-    background-color: #ffffffb6;
+    background-color: #000000bb;
     position: absolute;
     bottom: 8px;
     text-align: center;
-    color: #2e2e2e;
+    color: #ffffff;
 }
 
 
