--- a/assets/style.css
+++ b/assets/style.css
@@ -124,7 +124,8 @@ body{
 
 /* footer custom styles */
 .footer{
-    margin-top: auto;
+    /* margin-top: auto; */
+    margin:auto 0 0 0;
     text-align: center;
     /* position: fixed; */
     bottom: 0;
